# ride

./: Cargo.toml  ENHANCEMENTS.md  LICENSE  README.md  ROADMAP.md  keybindings.json  settings.json
.github/workflows/: ci.yml  release.yml
crates/ride-core/: Cargo.toml
crates/ride-core/src/: buffer.rs  command.rs  explorer.rs  folding.rs  fuzzy.rs  git.rs  highlight.rs  keymap.rs  lib.rs  lsp.rs  preview.rs  search.rs  settings.rs  tab.rs  theme.rs
crates/ride-core/src/highlight/: regex_hl.rs  treesitter_hl.rs
crates/ride-tui/: Cargo.toml
crates/ride-tui/src/: app.rs  main.rs  theme_style.rs  ui.rs  ui_code_action.rs  ui_completion.rs  ui_editor.rs  ui_explorer.rs  ui_fuzzy.rs  ui_goto.rs  ui_preview.rs  ui_references.rs  ui_search.rs  ui_status.rs  ui_tabs.rs
docs/superpowers/plans/: 2026-05-26-editor-enhancements.md
docs/superpowers/specs/: 2026-05-26-editor-enhancements-design.md
testdata/: README.md  diagram.mmd  notes.txt
testdata/src/: App.java  Main.kt  service.proto
