[package]
name = "ride-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ropey = "1"
regex = "1"
walkdir = "2"
ignore = "0.4"
tree-sitter = "0.24"
tree-sitter-java = "0.23"
tree-sitter-md = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
