[package]
name = "ride-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for the RIDE terminal IDE"

[dependencies]
ropey = "1"
regex = "1"
walkdir = "2"
ignore = "0.4"
tree-sitter = "0.24"
tree-sitter-java = "0.23"
tree-sitter-md = "0.3"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
