[package]
name = "ride-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI frontend for the RIDE IDE"

[[bin]]
name = "ride"
path = "src/main.rs"

[dependencies]
ride-core = { path = "../ride-core" }
ratatui = "0.29"
crossterm = "0.28"
